♿️ fix: set alt-text colour for social links They were unreadable before.

--- a/sass/parts/_footer.scss
+++ b/sass/parts/_footer.scss
@@ -33,6 +33,7 @@ footer {
     }
     
     .social>img {
+      color: #000000;
       width: 32px;
       height: 32px;
       padding: 18px;
